--- a/redirect.html
+++ b/redirect.html
@@ -2,16 +2,36 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Redirigiendo al formulario...</title>
-  <script>
-    // Esperar un momento y luego redirigir al formulario
-    sessionStorage.setItem('formularioCompletado', 'true'); // Reafirma el estado
-    setTimeout(() => {
-      window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfVIPtzBrNJkpq_EObb0O-Rixew92iJtqKOoThm5z1OW_vG8Q/viewform?usp=header";
-    }, 500);
-  </script>
+  <title>Gracias por registrarte</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 50px;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirigiendo al formulario, por favor espera...</p>
+  <h2>🎉 ¡Gracias por registrarte en DON LIMÓN!</h2>
+  <p>Ya puedes volver a la página principal.</p>
+  <button onclick="volverInicio()">Volver al inicio</button>
+
+  <script>
+    // Guardamos en sessionStorage que completó el formulario
+    sessionStorage.setItem('formularioCompletado', 'true');
+
+    function volverInicio() {
+      window.location.href = "https://donlimon.vercel.app/";
+    }
+  </script>
 </body>
 </html>
