--- a/redirect.html
+++ b/redirect.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Redirigiendo a DON LIMÓN...</title>
+  <meta charset="UTF-8" />
+  <title>Gracias por registrarte</title>
   <meta http-equiv="refresh" content="2;url=https://donlimon.vercel.app/">
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
-      padding-top: 100px;
+      padding: 50px;
     }
   </style>
 </head>
@@ -17,7 +17,7 @@
   <p>Serás redirigido automáticamente a la página principal...</p>
 
   <script>
-    // Marcar que ya completó el formulario
+    // Guardar que ya completó el formulario para no mostrar popup
     sessionStorage.setItem('formularioCompletado', 'true');
   </script>
 </body>
